Initial commit or your commit message

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body{
 .login-left{
   flex-grow: 1;
   height: 100vh;
-  background-color: #E9E9E9;
+  background-color: #F9F9F9;
 
   display: flex;
   justify-content: center;
