--- a/src/components/ServiceCardWithEditAndDelete/ServiceCardWithEditAndDelete.module.css
+++ b/src/components/ServiceCardWithEditAndDelete/ServiceCardWithEditAndDelete.module.css
@@ -60,7 +60,7 @@
   margin-top: 0.5rem;
 }
 
-.editBtn {
+.permitBtn {
   background-color: #4f46e5;
   color: white;
   padding: 0.5rem 1rem;
@@ -68,22 +68,9 @@
   border: none;
   cursor: pointer;
   font-size: 0.875rem;
+  height: 70px;
 }
 
-.editBtn:hover {
+.permitBtn:hover {
   background-color: #4338ca;
-}
-
-.deleteBtn {
-  background-color: #dc2626;
-  color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 0.375rem;
-  border: none;
-  cursor: pointer;
-  font-size: 0.875rem;
-}
-
-.deleteBtn:hover {
-  background-color: #b91c1c;
 }
