--- a/src/components/OrderCard/OrderCard.module.css
+++ b/src/components/OrderCard/OrderCard.module.css
@@ -56,19 +56,20 @@
 
 .buttonGroup {
   display: flex;
+  flex-direction: column;
   gap: 0.5rem;
   margin-top: 0.5rem;
+  margin-bottom: auto;
 }
 
 .permitBtn {
-  /* background-color: #002d59; */
-  color: #343A40;
+  background-color: #002d59;
+  color: white;
   padding: 1rem 2rem;
   border-radius: 0.375rem;
   border: none;
   cursor: pointer;
   font-size: 1.0rem;
-  margin-bottom: 100%;
 }
 
 .permitBtn:hover {
