--- a/src/pages/User/Order/OrderDetailPage.module.css
+++ b/src/pages/User/Order/OrderDetailPage.module.css
@@ -156,3 +156,19 @@
   font-size: 15px;
   color: #555;
 }
+
+.button {
+  margin-top: 12px;
+  padding: 16px 46px;
+  background-color: #0077cc;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #005fa3;
+}
