--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,6 +1,7 @@
 .input {
   border: 2px solid transparent;
-  width: 55em;
+  max-width: 55em;
+  width: 100%;
   height: 4em;
   padding: 1em;
   outline: none;
